fix: fixed overflow in homepage

--- a/src/Home.css
+++ b/src/Home.css
@@ -7,6 +7,7 @@
 
 
 .Home {
+    overflow-x: hidden;
     @apply h-[100vh] w-[100vw]
 }
 
